apply plugin: 'com.android.application'

apply plugin: 'kotlin-android'

apply plugin: 'kotlin-android-extensions'

android {
    compileSdkVersion 27
    defaultConfig {
        applicationId "leaf.prod.app"
        minSdkVersion 21
        targetSdkVersion 27
        versionCode 7
        versionName "1.3.1"
        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
        multiDexEnabled true
    }
    signingConfigs {
        debug {
            storeFile file('../walletKey')
            storePassword "123456"
            keyAlias "qq"
            keyPassword "123456"
        }
    }
    buildTypes {
        release {
            minifyEnabled false
            signingConfig signingConfigs.debug
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
        debug {
            signingConfig signingConfigs.debug
            jniDebuggable false
            renderscriptDebuggable false
            minifyEnabled false
            pseudoLocalesEnabled false
        }
    }
    compileOptions {
        targetCompatibility JavaVersion.VERSION_1_8
        sourceCompatibility JavaVersion.VERSION_1_8
    }
    lintOptions {
        checkReleaseBuilds false
        abortOnError false
    }
    sourceSets {
        main {
            jniLibs.srcDirs = ['libs']
        }
    }
}

repositories {
    flatDir {
        dirs 'libs' //this way we can find the .aar file in libs folder
    }
}

dependencies {
    implementation fileTree(include: ['*.jar'], dir: 'libs')
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
    //noinspection GradleCompatible
    implementation 'com.android.support:appcompat-v7:27.1.1'
    implementation 'com.android.support:cardview-v7:27.1.1'

    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
    testImplementation 'junit:junit:4.12'
    androidTestImplementation 'com.android.support.test:runner:1.0.2'
    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
    implementation 'com.jakewharton:butterknife:8.8.1'
    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
    implementation 'com.android.support:recyclerview-v7:27.1.1'
    implementation 'com.rengwuxian.materialedittext:library:2.1.4'
    implementation 'com.trello:rxlifecycle:0.3.0'
    implementation 'com.trello:rxlifecycle-components:0.3.0'
    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
    implementation 'com.squareup.retrofit2:adapter-rxjava:2.2.0'
    implementation 'io.reactivex:rxjava:1.2.4'
    implementation 'io.reactivex:rxandroid:1.2.1'
    implementation 'com.android.support:support-annotations:27.1.1'
    implementation 'com.allenliu.badgeview:library:1.1.1'
    implementation 'com.yanzhenjie:recyclerview-swipe:1.1.4'
    implementation 'com.github.bumptech.glide:glide:4.2.0'
    implementation 'com.android.support:support-v4:27.1.1'
    implementation 'com.android.support:percent:27.1.1'
    implementation 'com.google.code.gson:gson:2.8.2'
    //友盟分享
    implementation 'com.umeng.sdk:common:1.5.3'
    implementation 'com.umeng.sdk:analytics:7.5.3'
    implementation 'com.orhanobut:logger:2.1.1'
    implementation 'com.android.support:multidex:1.0.3'
    implementation 'org.greenrobot:eventbus:3.1.1'
    implementation 'com.airbnb.android:lottie:1.0.1'
    //适配器
    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.41'
    //md对话框
    implementation 'com.afollestad.material-dialogs:core:0.9.5.0'
    implementation 'com.android.support:design:27.1.1'
    //RxTool工具类库
    //基础工具库
    implementation 'com.github.vondear.RxTool:RxKit:v2.2.7'
    //UI库
    implementation 'com.github.vondear.RxTool:RxUI:v2.2.7'
    //功能库（Zxing扫描与生成二维码条形码 支付宝 微信）
    implementation 'com.github.vondear.RxTool:RxFeature:v2.2.7'
    //ArcGis For Android工具库（API：100.1以上版本）
    implementation 'com.github.vondear.RxTool:RxArcGisKit:v2.2.7'
    implementation 'com.github.hotchemi:permissionsdispatcher:3.0.1'
    annotationProcessor "com.github.hotchemi:permissionsdispatcher-processor:3.0.1"
    implementation project(':walletsdk')
    implementation 'com.google.guava:guava:26.0-android'
    implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0-alpha-14'
    implementation 'com.scwang.smartrefresh:SmartRefreshHeader:1.1.0-alpha-14'
    implementation 'com.robinhood.ticker:ticker:2.0.0'
    implementation 'com.github.ybq:Android-SpinKit:1.1.0'
    implementation 'com.kyleduo.switchbutton:library:2.0.0'
    implementation 'com.xw.repo:bubbleseekbar:3.16'
    // umeng统计
    implementation 'com.umeng.sdk:common:1.5.3'
    implementation 'com.umeng.sdk:analytics:7.5.3'
    // umeng推送
//    implementation 'com.umeng.sdk:utdid:1.1.5.3'
//    implementation 'com.umeng.sdk:push:4.2.0'
    // agent web for combine dex only compatible with version: 3.0.0-rc
    implementation 'com.just.agentweb:agentweb:3.0.0-rc'
    implementation 'com.airbnb.android:lottie:2.5.5'
    implementation(name: 'RxTools-library', ext: 'aar')
}
